--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,9 +1,7 @@
 customtkinter==5.2.2
-openai
+openai==1.12.0
 pandas==2.2.0
 Pillow==9.0.1
 Pillow==10.2.0
 python-dotenv==1.0.1
-PyYAML==6.0.1
-PyYAML==6.0.1
 ttkbootstrap==1.10.1
