--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,6 @@
 customtkinter==5.2.2
-openai==1.12.0
-pandas==2.2.0
+openai==1.68.0
+pandas
 Pillow==9.0.1
-Pillow==10.2.0
-python-dotenv==1.0.1
+python-dotenv
 ttkbootstrap==1.10.1
